# color-sorting-cli

./: .gitignore  LICENSE  Makefile  README.md  pylintrc  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml  deploy-documentation.yml  test.yml
demo/: colors.ase  colors.txt  colors_file.ase  colors_file.clr  colors_file.txt  colors_file_hillbert_sorted.txt  colors_file_hsl_sorted.ase  colors_file_hsl_sorted.txt  colors_file_sorted.txt  colors_hillbert_sorted.txt  generate_random_colors.py  show_colors.py
docs/doctrees/: colors-file-specification.doctree  environment.pickle  harmony.doctree  index.doctree
docs/html/: .buildinfo  colors-file-specification.html  genindex.html  harmony.html  index.html  objects.inv  search.html  searchindex.js
harmony/: __init__.py  adapters.py  app.py  constants.py  data_access.py  exceptions.py  main.py  models.py  services.py  utils.py
harmony/resources/: color-names.csv  db.sqlite3
harmony/service_layer/: ase_writting.py  calculators.py  clr_writting.py  converters.py  reading_strategies.py  services.py  sorting_strategies.py  writting_strategies.py
scripts/: coverage.sh  format.sh  lint.sh  run.sh  test.sh
source/commands/: sort.rst  txt2ase.rst  utils.rst
tests/: constants.py  helpers.py
tests/adapters_tests/: test_command_with_version.py
tests/entrypoints_tests/: test_colors_file_entrypoint.py  test_sort_command.py  test_toase_command.py  test_txt2ase_command.py  test_txt2clr_command.py  test_version_command.py
tests/services_tests/: test_ase_path_generator.py  test_color_reader.py  (+8 more)
(+11 files in other folders)
